--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1338,6 +1338,11 @@ textarea.form-textarea[rows] {
   margin-right: auto;
 }
 
+.tf-container{
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
+}
+
 #app-wrap {
   padding: 50px 0px 62px;
 }
@@ -1589,7 +1594,9 @@ textarea.form-textarea[rows] {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 16px 8px;
+  padding: 12px 5px 8px;
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
 }
 
 .tf-navigation-bar li a {
