--- a/public/admin/style.css
+++ b/public/admin/style.css
@@ -8132,7 +8132,7 @@ label {
 }
 
 .classycloseIcon .cross-wrap span {
-  background: red;
+  background: #067fab;
 }
 
 .breakpoint-on .classynav {
