--- a/public/styles/bootstrap.css
+++ b/public/styles/bootstrap.css
@@ -3209,8 +3209,8 @@ fieldset:disabled .btn {
 
 .btn-secondary {
     color: #fff;
-    background-color: #ff3100;
-    border-color: #ff3100
+    background-color: #067fab;
+    border-color: #067fab
 }
 
 .btn-secondary:hover {
